Fix spacing on /hourofcode/overview large tiles

--- a/pegasus/sites.v3/code.org/public/css/tools.css
+++ b/pegasus/sites.v3/code.org/public/css/tools.css
@@ -56,6 +56,9 @@ h1.tools-title {
   border: 1px solid #949ca2;
   padding: 20px;
   min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 h3.tutorial-info-h {
